src/atividade_cores_style.css
* {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
    height: 100vp;
}

/* Estilo do cabeçalho */
header {
    background-color: #0BB3D9;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 2%;
    height: 90px;
}

header div span.hamburgue {
    display: none;
}

img {
    height: 60px;
}

#nav-cabecalho {
    width: 60%;
    display: flex;
    justify-content: flex-end;
}

#nav-cabecalho ul {
    display: flex;
    justify-content: space-between;
    width: 90%;
    list-style: none;
}

#nav-cabecalho ul li {
    padding: 0 0 0 20px;
}

#nav-cabecalho ul:first-child {
    padding-left: 0;
}

#nav-cabecalho ul li a {
    text-decoration: none;
    color: white;
    position: relative;
    padding: 0px;
}

#nav-cabecalho ul li a:after{
    content: "";
    position:absolute;
    background-color: #C7D941;
    height: 5px;
    width: 0;
    left: 0;
    border-radius: 10px;
    bottom: -10px;
    transition: 0.5s;
    
}

#nav-cabecalho ul li a:hover:after{
    width: 100%;
    font-size: 1.2em;
}

#nav-cabecalho--mobile {
    display: none;
}

h1,
h2 {
    padding: 10px 0px;
    color: #0BB3D9;
    text-align: center;
}

main {
    margin: 10px;
    flex: 1;
}

/* Estilos gerais do site */
.site {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

#nav-cabecalho {
    list-style: none;
    color: white;
    
}


.list-hader{
    display: inline;
}

/* Estilos para a página de conteúdo */
.color-name {
    text-align: center;
    width: 100%;
    margin-top: 20px; /* Espaço entre o h2 e a cor */
}

.circles-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0 auto;
    margin-top: 40px;
    align-self: center;
    max-width: 400px;
    margin: 0 auto;
}

.circle {
    width: 100px;
    height: 100px;
    background-color: whitesmoke; /* Cor padrão dos círculos */
    display: inline-block;
    margin: 10px;
    border-radius: 50%;
    cursor: pointer;
    transition: background-color 0.3s ease; 
}
  
  .correct-color {
    background-color: whitesmoke; /* Cor correta do círculo */
}
  
.button-container {
    display: flex;
    text-align: center; 
    margin-top: 20px; 
    margin-bottom: 20px; 
}

.button-message-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

button {
    font-size: 18px;
    padding: 10px 20px;
    background-color: #E64A1E;
    color: #fff;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s ease;
    text-transform: uppercase;
    border-radius: 10px;
    margin: 30px;
}

button:hover {
    background-color: #F86645;
}

#message {
    text-align: center;
    margin-top: 20px;
}
  

/* Estilos do rodapé */
footer {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #0BB3D9;
    color: white;
    margin-bottom: 0px;
    flex-wrap: wrap;
    padding: 30px 5%;
    gap: 10px;
    width: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

#nav-rodape {
    width: 80%;
    display: flex;
    justify-content: center;
}

#nav-rodape ul {
    width: 100%;
    display: grid;
    text-align: center;
    grid-template-columns: repeat(4, auto);
}

#nav-rodape ul li {
    display: inline-block;
}

#nav-rodape ul li a{
    text-decoration: none;
    color: white;
}


/* Responsividade cabeçalho */

@media screen and (max-width: 1000px) {
    footer{
        position: relative;
        bottom: 0;
    }



    .type-error {
        text-align: center;
        justify-content: space-around; /* Ajuste o espaçamento entre os elementos */
        margin-top: 10px; /* Reduza o espaço acima do grupo de elementos */
    }

    .type-error span {
        margin: 10px; /* Remova as margens internas (se houver) */
    }
    
    header div.group--hamburgue__logo {
        width: 30%;
        display: flex;
        align-items: center;
        justify-content: space-between;
    }

    header div.group--hamburgue__logo span.hamburgue {
        display: inline-block;
        width: 24px; 
        font-size: 36px; 
        margin-bottom: 12px; 
        margin-right: 30px; 
        color: #C7D941;
        cursor: pointer;
    }

    header div div.logo a img {
        height: 51px;
    }

    nav#nav-cabecalho {
        display: none;
    }

    nav#nav-cabecalho--mobile {
        width: 70%;
        display: flex;
        justify-content: flex-end;
    }

    #nav-cabecalho--mobile ul {
        width: 70%;
        display: flex;
        justify-content: space-around;
    }

    #nav-cabecalho--mobile ul li {
        padding: 5px;
        list-style: none;
    }

    #nav-cabecalho--mobile ul li a {
        display: none;
    }

    #nav-cabecalho--mobile ul li label.area__infantil {
        display: flex;
        flex-direction: column;
        text-align: center;
        align-items: center;
        border-radius: 9em;
        background-color: #C7D941;
        padding: 10px;
        cursor: pointer;
    }

    #nav-cabecalho--mobile ul li label.area__infantil span {
        color: #ffffff;
        width: 24px;
        width: auto;
        font-size: 32px;
        padding: 0px;
    }

    #nav-cabecalho--mobile ul li label.area__infantil p {
        color: #ffffff; 
    }

    #infantil__2 p {
        padding: 0 8px;
    }

    #infantil__3 p {
        padding: 0 5px;
    }

}


/* Responsividade rodape */

@media screen and (max-width: 812px){
    button {
        margin: 10px auto;
    }

    footer{
        position: absolute;
        bottom: 0;
    }

    h1,
    h2 {
        padding: 10px 0px;
        color: #0BB3D9;
        text-align: center;
        font-size: 15px;
    }

    .circles-container {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        margin: 0 auto;
        margin-top: 40px;
        align-self: center;
        max-width: 300px;
        margin: 0 auto;
    }

    .circle {
        width: 80px;
        height: 80px;
        background-color: whitesmoke; /* Cor padrão dos círculos */
        display: inline-block;
        margin: 10px;
        border-radius: 50%;
        cursor: pointer;
        transition: background-color 0.3s ease; 
    }
      
    .correct-color {
        background-color: whitesmoke; /* Cor correta do círculo */
    }
    
    nav#nav-rodape ul {
        row-gap: 20px;
        grid-template-columns: repeat(3, 1fr);
        grid-template-rows: repeat(2, auto);
        grid-template-areas: 
        "rodape__item___1 rodape__item___1 rodape__item___1"
        "rodape__item___2 rodape__item___3 rodape__item___4";
    }

    .rodape__item___1 {
        grid-area: rodape__item___1;
    }

    .rodape__item___2 {
        grid-area: rodape__item___2;
    }

    .rodape__item___3 {
        grid-area: rodape__item___3;
    }

    .rodape__item___4 {
        grid-area: rodape__item___4;
    }

}

